# hyperdome

./: .gitignore  BUILD.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  app.py  cli.py  hyperdome.env  hyperdome_client.spec  pyproject.toml  setup.py  stdeb.cfg  therapists.db
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-app.yml
apparmor/: usr.bin.hyperdome  usr.bin.hyperdome_server
apparmor/abstractions/: hyperdome
apparmor/local/: usr.bin.hyperdome  usr.bin.hyperdome_server
dev_scripts/: hyperdome_client  hyperdome_client_test.py  hyperdome_connection.py  hyperdome_server_test.py
git-hooks/: README.md
hyperdome/: __init__.py
hyperdome/client/: __init__.py  add_server_dialog.py  api.py  hyperdome_client.py  main.py  settings_dialog.py  tasks.py  threads.py  tor_connection_dialog.py  widgets.py
hyperdome/client/scripts/: start_client.py
hyperdome/common/: __init__.py  bootstrap.py  common.py  encryption.py  forgive_unbound.py  key_conversion.py  old_encryption.py  onion.py  schemas.py  server.py  settings.py  strings.py  types.py  utils.py
hyperdome/server/: __init__.py  app.py  counselor.py  database.py  hyperdome_server.py  main.py  models.py  web.py
hyperdome/server/scripts/: cli.py
hyperdome_client/: __init__.py  add_server_dialog.py  encryption.py  hyperdome_client.py  server.py  server_status.py  settings_dialog.py  threads.py  tor_connection_dialog.py  update_checker.py  widgets.py
hyperdome_client/mode/: __init__.py  history.py
hyperdome_client/mode/receive_mode/: __init__.py
hyperdome_client/mode/share_mode/: __init__.py  file_selection.py  threads.py
hyperdome_common/: __init__.py
hyperdome_server/: __init__.py  common.py  hyperdome_server.py  onion.py  settings.py  strings.py  web.py
hyperdome_server/server/: models.py
hyperdome_server/web/: __init__.py  share_mode.py  web.py
install/: build_deb.sh  build_exe.bat  build_generic.sh  build_osx.sh  build_rpm.sh  check_lacked_trans.py  get-tor-osx.py  get-tor-windows.py  hyperdome.appdata.xml  hyperdome.desktop  hyperdome_client.spec  hyperdome_logo.icns  hyperdome_server.spec  ppa_release.sh  pyinstaller.spec  requirements-tests.txt  requirements.txt
install/licenses/: license-onionshare.txt  readme.txt
install/macos_sandbox/: parent.plist
install/scripts/: cli.py  hyperdome_client  hyperdome_client.py  hyperdome_server  onionshare-nautilus.py
onionshare/: __init__.py
onionshare/web/: share_mode.py  therapists.db
onionshare_gui/: add_server_dialog.py  chat.py  onionshare_gui.py
templates/: layout.html  signin.html  signup.html
test/hyperdome_common_test/: test_available_port.py  test_bootstrap.py  test_encryption.py  test_server.py
