[tool.poetry]
name = "hyperdome"
version = "0.3.0"
description = "The safest place to reach out"
authors = ["Skyelar Craver <scravers@protonmail.com>", "Steven Pitts <makusu2@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "~3.10"
cryptography = "^39.0"
itsdangerous = "^1.1.0"
stem = "^1.8.1"
Flask = "^1.1.2"
Jinja2 = "^2.11.1"
PyQt5 = "~5.15.7"
requests = {extras = ["socks"], version = "^2.28.0"}
pefile = "^2022.5.30"
flask-sqlalchemy = "^2.4.1"
autologging = "^1.3.2"
markupsafe = "2.0.1"

[tool.poetry.dev-dependencies]
macholib = {version = "^1.9", platform = "darwin"}
dis3 = {version = "*", platform = "darwin"}
pyinstaller = {git = "https://github.com/pyinstaller/pyinstaller.git", tag = "v3.6"}
setuptools = "^46.1.3"
pytest = "^7.2.0"
pytest-qt = "^3.3.0"
bandit = "^1.6.2"
black = "^19.10b0"
pywin32-ctypes = {version = "^0.2.0", platform = "windows"}
hypothesis = "^5.10.4"
coverage = {extras = ["toml"], version = "^5.1"}

[tool.poetry.scripts]
hyperdome_client = "hyperdome.client.scripts.start_client:start"
hyperdome_server = "hyperdome.server.scripts.cli:admin"

[tool.coverage.run]
source = ["hyperdome"]
command_line = "-m pytest ."

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

