[tool.poetry]
name = "hyperdome"
version = "0.3.0"
description = "The safest place to reach out"
authors = ["Skyelar Craver <scravers@protonmail.com>", "Steven Pitts <makusu2@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "~3.11"
cryptography = "^39.0"
stem = "^1.8.1"
PyQt5 = "~5.15.7"
requests = {extras = ["socks"], version = "^2.28.0"}
pefile = "^2022.5.30"
autologging = "^1.3.2"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
websockets = "^10.4"
pydantic = "^1.10.4"
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.46"
ge25519 = "^1.3.0"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]
macholib = {version = "^1.9", platform = "darwin"}
dis3 = {version = "*", platform = "darwin"}
pyinstaller = "^5.7.0"
setuptools = "^65.6.3"
pytest = "^7.2.0"
pytest-qt = "^4.2.0"
bandit = "^1.7.4"
black = "^22.12.0"
pywin32-ctypes = {version = "^0.2.0", platform = "windows"}
hypothesis = "^6.61.3"
coverage = {extras = ["toml"], version = "^7.0.4"}

[tool.poetry.scripts]
hyperdome_client = "hyperdome.client.scripts.start_client:start"
hyperdome_server = "hyperdome.server.scripts.cli:admin"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"

[tool.coverage.run]
source = ["hyperdome"]
command_line = "-m pytest ."

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.masonry.api"
